--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
-Remove binaries from src folder
 
 Optimization:
+add optimization flag to cmakelists (https://stackoverflow.com/questions/41361631/optimize-in-cmake-by-default)
 Used stl functionality in TypingStats
 Elaborate on the overhead arrays in TypingStats: Those which only hold information that could fully be derived from the top 3 arrays in the class.
     However, we still decide to use those to accelerate compution. Similarly, we also export them into the JSON to be less error prone in 
